--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "antd": "^3.23.2",
     "draft-js": "^0.11.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0"
@@ -21,7 +22,9 @@
     "@babel/preset-env": "^7.6.0",
     "@babel/preset-react": "^7.0.0",
     "@types/react": "^16.8.13",
+    "babel-plugin-import": "^1.12.1",
     "babel-plugin-transform-class-properties": "^6.24.1",
-    "parcel-bundler": "^1.12.3"
+    "parcel-bundler": "^1.12.3",
+    "sass": "^1.22.12"
   }
 }
